# sistemaBancarioWeb

./: docker-compose.yml
Docker-Compose/: docker-compose.yml
Docker-Compose/sql/: CMakeLists.txt
app/: index.html  index.php
c/: Dockerfile
c/HelloWorldDocker/: HelloWorldDocker  HelloWorldDocker.pro  Makefile  entry.sh  main.cpp
c/HelloWorldDocker/server/config/: CPPWeb.ini
crow (1)/: example_chat.html
crow (1)/html/: Banco.html  Cliente.html  criarBanco.html  index.html
crow (1)/include/TP1/: Interface.h  WebInterface.cpp  WebInterface.h  main.cpp
crow (1)/src/: example.cpp
mysql/initial_data/: yazaki.sql
nginx/: nginx.conf
sql/crow/src/: example.cpp
